# rss-actions

./: Cargo.toml  README.md  design.md  todo.txt
.github/workflows/: build-test.yaml
scripts/: rss-actions-update.service  rss-actions-update.timer
src/: lib.rs  main.rs
src/cli/: mod.rs
src/commands/: inputs.rs  mod.rs  outputs.rs
src/config/: mod.rs
src/db/: create.rs  mod.rs  transaction.rs
src/db/tests/: mod.rs  ops.rs
src/models/: feed.rs  filter.rs  mod.rs
src/models/test/: mod.rs
src/update/: mod.rs
tests/: alias.rs  delete_feed.rs  delete_filter.rs  filters.rs  sanity.rs  test_utils.rs  update.rs
tests/scripts/: print_data
tests/test_rss_feed_files/: bad_feed.rss  missing_data.rss  simple_feed.rss  two_entries.rss  two_entries_same_pubdate.rss
