[package]
name = "rss-actions"
version = "0.2.1"
authors = ["Harry Stern <harry@harrystern.net>"]
edition = "2021"
description = "Run scripts automatically on rss feed updates."
repository = "https://github.com/boustrophedon/rss-actions"
license = "AGPL-3.0"
keywords = ["rss", "cli", "utility"]
categories = ["command-line-utilities"]

[[bin]]
name = "rss-actions"
path = "src/main.rs"

[dependencies]
anyhow = "^1"
bytes = "^1"
chrono = "0.4"
directories = "^3"
reqwest = {version = "^0.11", features = ["blocking"] }
rss = "^1"
rusqlite = { version = "^0.28", features = ["url", "chrono"] }
serde = { version = "^1", features = ["derive"] }
serde_derive = "^1"
structopt = "0.3"
toml = "0.5"
url = "^2"

[dev-dependencies]
tempfile = "^3"

# used to serve rss files in integration tests
tokio = { version = "1", features = ["full"] }
warp = "0.3"
